--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="header">
         <div class="container"></div>
             <nav>
-                <img src="images/SatyaSri.png" class="logo">
+                <img src="SatyaSri.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -36,7 +36,7 @@
             <div class="row">
 
                 <div class="about-col-1">
-                    <img src="images/Computerimg.webp">
+                    <img src="Computerimg.webp">
 
 
                 </div>
@@ -89,7 +89,7 @@
             <div class="sub-title">My Work</div>
             <div class="worklist">
                 <div class="work">
-                    <img src="images/image1.png">
+                    <img src="image1.png">
                     <div class="layer">
                         <h3>Netflix Clone</h3>
                         <p>As part of my professional development, I undertook the project of creating a Netflix clone.
@@ -101,7 +101,7 @@
                 </div>
                 
                 <div class="work">
-                    <img src="images/image2.jpg">
+                    <img src="image2.jpg">
                     <div class="layer">
                         <h3>Portfolio</h3>
                         <p>I developed a portfolio website using HTML, CSS, and JavaScript to showcase my skills,
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-2.png">
+                    <img src="work-2.png">
                     <div class="layer">
                         <h3>content Mangement Tool</h3>
                         <p>I developed a content management tool utilizing HTML, CSS, and JavaScript. This tool is
@@ -138,7 +138,7 @@
                 <a href="mailto:mattapartisatyasri@gmail.com"><i class="fa-regular fa-envelope"></i></a>
                 <a href="https://github.com/SatyaSri749"><i class="fa-brands fa-github"></i></a>
                 </div>
-                <a href="images/MyResume.pdf" download class="btn btn2">Download Resume</a>
+                <a href="MyResume.pdf" download class="btn btn2">Download Resume</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
